--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@
               <button class="sort-button" data-field="year" onclick="sortList('year')">Sort</button>
               <ul id="year-list"></ul>
             </div>
+            <div id="playlist-buttons"></div>
         </div>
+        
     </section>
+    <div id="snackbar">Song added to playlist!</div>
+    <div id="tooltip" class="tooltip-container"></div>
 
     <!-- Single Song View -->
     <section id="single-song-view">
