home view fully functional

--- a/index.html
+++ b/index.html
@@ -28,21 +28,24 @@
     </header>
 
     <!-- Home View -->
-    <section id="home-view">
+    <section id="home-view" class="show">
         <div id="top-genres">
             <h2>Top Genres</h2>
             <!-- Display the top 15 genres with links -->
             <!-- Example: <a href="#genre1">Genre 1</a> -->
+            <ul id="top-genres-list"></ul>
         </div>
         <div id="top-artists">
             <h2>Top Artists</h2>
             <!-- Display the top 15 artists with links -->
             <!-- Example: <a href="#artist1">Artist 1</a> -->
+            <ul id="top-artists-list"></ul>
         </div>
         <div id="most-popular-songs">
             <h2>Most Popular Songs</h2>
             <!-- Display the top 15 songs with links -->
             <!-- Example: <a href="#song1">Song 1</a> -->
+            <ul id="top-songs-list"></ul>
         </div>
     </section>
 
@@ -109,7 +112,7 @@
     <div id="tooltip" class="tooltip-container"></div>
 
     <!-- Single Song View -->
-    <section id="single-song-view" style="display: none;">
+    <section id="single-song-view">
         <h2>Song Details</h2>
         <!-- Song Details Div -->
         <div id="song-details"></div>
