playlist view fully functional

--- a/index.html
+++ b/index.html
@@ -128,6 +128,27 @@
         <h2>Playlist</h2>
         <!-- Display playlist contents with options to remove songs and clear the playlist -->
         <!-- Display summary info about the playlist -->
+
+        <ul id="playlist-info">
+          <li id="playlist-len"></li>
+          <li id="playlist-ranking"></li>
+        </ul>
+          <table id="playlist-table">
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Artist</th>
+                <th>Genre</th>
+                <th>Year</th>
+                <th>Popularity</th>
+                <th><button onClick="clearPlaylist()">Remove All</button></th>
+              </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+          </table>
+      </div>
     </section>
 
     <!-- Footer Section -->
