--- a/index.html
+++ b/index.html
@@ -122,14 +122,17 @@
 
   <!-- Single Song View -->
   <section id="single-song-view">
-    <h2 class="title is-3">Song Details</h2>
+    <div class="columns">
+      <div class="column"><h2 class="title is-3"></h2></div>
+      <div class="column"><button class="button" onclick="closeSingleSongView()">Close</button></div>
+    </div>
     <!-- Song Details Div -->
-    <div id="song-details"></div>
+    <div id="song-details">
+    </div>
     <!-- Radar Chart Div -->
     <div id="radar-chart-container">
       <canvas id="radar-chart"></canvas>
     </div>
-    <button onclick="closeSingleSongView()">Close</button>
   </section>
 
   <!-- Playlist View -->
