--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <!-- Header Section -->
   <header>
     <nav class="navbar is-primary">
-      <div class="navbar-brand is-expanded">
+      <div class="navbar-brand">
         <h1 class="title is-1">Songify</h1>
       </div>
       <div class="navbar-start topbar">
-        <button class='navbar-item button' onclick="togglePage('home-view')">Home</button>
-        <button class='navbar-item button' onclick="togglePage('search-view')">Search/Browse Songs</button>
-        <button class='navbar-item button' onclick="togglePage('playlist-view')">Playlist</button>
+        <button class='button is-active' onclick="togglePage('home-view')">Home</button>
+        <button class='button' onclick="togglePage('search-view')">Search/Browse Songs</button>
+        <button class=' button' onclick="togglePage('playlist-view')">Playlist</button>
         <button class='button dropdown-trigger' onmouseover="showCredits()"> Credits</button>
         <ul class="popup dropdown-content">
           <li>
