--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
         <h1 class="title is-1">Songify</h1>
       </div>
       <div class="navbar-start topbar">
-        <button class='button is-active' onclick="togglePage('home-view')">Home</button>
+        <button class='button' onclick="togglePage('home-view')">Home</button>
         <button class='button' onclick="togglePage('search-view')">Search/Browse Songs</button>
         <button class=' button' onclick="togglePage('playlist-view')">Playlist</button>
-        <button class='button dropdown-trigger' onmouseover="showCredits()"> Credits</button>
-        <ul class="popup dropdown-content">
-          <li>
-            <div class="dropdown-item">Ethan Ai</div>
-          </li>
-          <li>
-            <div class="dropdown-item">Kushal Saini</div>
-          </li>
-          <li><a href="https://github.com/ethan50876/COMP3612-ASG2" class="dropdown-item">GitHub</a></li>
-        </ul>
+        <div id="credits">
+          <button class='button' onmouseover="showCredits()">Credits</button>
+          <ul class="popup dropdown-content">
+            <li>
+              <div class="dropdown-item">Ethan Ai</div>
+            </li>
+            <li>
+              <div class="dropdown-item">Kushal Saini</div>
+            </li>
+            <li><a href="https://github.com/ethan50876/COMP3612-ASG2" class="dropdown-item">GitHub</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
   </header>
@@ -59,60 +61,63 @@
 
   <!-- Search/Browse Songs View -->
   <section id="search-view">
-    <div class="search-engine">
+    <div id="search-view-top" class="has-background-light">
       <h2 class="title is-3">Search/Browse Songs</h2>
+      <div class="search-engine">
+        <!-- Title Search -->
+        <input type="radio" id="title-radio" name="search-field" checked>
+        <label class="label" for="title">Title:</label>
+        <input class="input" type="text" id="title" placeholder="Type here">
+        <label for="title-radio" onclick="updateRadioButtons('title')"></label>
 
-      <!-- Title Search -->
-      <input type="radio" id="title-radio" name="search-field" checked>
-      <label for="title">Title:</label>
-      <input type="text" id="title" placeholder="Type here">
-      <label for="title-radio" onclick="updateRadioButtons('title')"></label>
+        <!-- Artist Search -->
+        <input type="radio" id="artist-radio" name="search-field">
+        <label class="label" for="artist">Artist:</label>
+        <select class="select" id="artist">
+          <option value="" selected>Pick one</option>
+        </select>
+        <label for="artist-radio" onclick="updateRadioButtons('artist')"></label>
 
-      <!-- Artist Search -->
-      <input type="radio" id="artist-radio" name="search-field">
-      <label for="artist">Artist:</label>
-      <select id="artist">
-        <option value="" selected>Pick one</option>
-      </select>
-      <label for="artist-radio" onclick="updateRadioButtons('artist')"></label>
+        <!-- Genre Search -->
+        <input type="radio" id="genre-radio" name="search-field">
+        <label class="label" for="genre">Genre:</label>
+        <select class="select" id="genre">
+          <option value="" selected>Pick one</option>
+        </select>
+        <label for="genre-radio" onclick="updateRadioButtons('genre')"></label>
 
-      <!-- Genre Search -->
-      <input type="radio" id="genre-radio" name="search-field">
-      <label for="genre">Genre:</label>
-      <select id="genre">
-        <option value="" selected>Pick one</option>
-      </select>
-      <label for="genre-radio" onclick="updateRadioButtons('genre')"></label>
-
-      <button onclick="search()">Search</button>
-      <button onclick="resetSearch()">Reset</button>
+        <button class="button" onclick="search()">Search</button>
+        <button class="button" onclick="resetSearch()">Reset</button>
+      </div>
     </div>
 
-    <div class="song-list">
-      <div class="list-container" id="title-container">
-        <h3>Title</h3>
-        <button class="sort-button" data-field="title" onclick="sortList('title')">Sort</button>
-        <ul id="results-list"></ul>
+    <div id="search-body">
+      <div class="song-list">
+        <div class="list-container" id="title-container">
+          <h3 class="title is-4">Title</h3>
+          <button class="sort-button button is-small" data-field="title" onclick="sortList('title')">Sort</button>
+          <ul id="results-list"></ul>
+        </div>
+  
+        <div class="list-container" id="artist-container">
+          <h3 class="title is-4">Artist</h3>
+          <button class="sort-button button is-small" data-field="artist" onclick="sortList('artist')">Sort</button>
+          <ul id="artist-list"></ul>
+        </div>
+  
+        <div class="list-container" id="genre-container">
+          <h3 class="title is-4">Genre</h3>
+          <button class="sort-button button is-small" data-field="genre" onclick="sortList('genre')">Sort</button>
+          <ul id="genre-list"></ul>
+        </div>
+  
+        <div class="list-container" id="year-container">
+          <h3 class="title is-4">Year</h3>
+          <button class="sort-button button is-small" data-field="year" onclick="sortList('year')">Sort</button>
+          <ul id="year-list"></ul>
+        </div>
+        <div id="playlist-buttons"></div>
       </div>
-
-      <div class="list-container" id="artist-container">
-        <h3>Artist</h3>
-        <button class="sort-button" data-field="artist" onclick="sortList('artist')">Sort</button>
-        <ul id="artist-list"></ul>
-      </div>
-
-      <div class="list-container" id="genre-container">
-        <h3>Genre</h3>
-        <button class="sort-button" data-field="genre" onclick="sortList('genre')">Sort</button>
-        <ul id="genre-list"></ul>
-      </div>
-
-      <div class="list-container" id="year-container">
-        <h3>Year</h3>
-        <button class="sort-button" data-field="year" onclick="sortList('year')">Sort</button>
-        <ul id="year-list"></ul>
-      </div>
-      <div id="playlist-buttons"></div>
     </div>
 
   </section>
@@ -128,8 +133,7 @@
       <div class="column"><button class="button" onclick="closeSingleSongView()">Close</button></div>
     </div>
     <!-- Song Details Div -->
-    <div id="song-details">
-    </div>
+    <div id="song-details"></div>
     <!-- Radar Chart Div -->
     <div id="radar-chart-container">
       <canvas id="radar-chart"></canvas>
